// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chip closable 1`] = `
<Chip
  className="my-chp-cls"
  closeBtnAriaLabel="close"
  component="div"
  id="chip_one"
  isOverflowChip={false}
  isReadOnly={false}
  onClick={[Function]}
  tooltipPosition="top"
>
  <GenerateId
    prefix="pf-random-id-"
  >
    <div
      className="pf-c-chip my-chp-cls"
      data-ouia-component-id={3}
      data-ouia-component-type="PF4/Chip"
      data-ouia-safe={true}
    >
      <span
        className="pf-c-chip__text"
        id="pf-random-id-1"
      >
        Chip
      </span>
      <ChipButton
        aria-label="close"
        aria-labelledby="remove_pf-random-id-1 pf-random-id-1"
        id="remove_pf-random-id-1"
        onClick={[Function]}
      >
        <Button
          aria-label="close"
          aria-labelledby="remove_pf-random-id-1 pf-random-id-1"
          className=""
          id="remove_pf-random-id-1"
          onClick={[Function]}
          variant="plain"
        >
          <button
            aria-disabled={null}
            aria-label="close"
            aria-labelledby="remove_pf-random-id-1 pf-random-id-1"
            className="pf-c-button pf-m-plain"
            data-ouia-component-id={null}
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={false}
            id="remove_pf-random-id-1"
            onClick={[Function]}
            tabIndex={null}
            type="button"
          >
            <TimesCircleIcon
              aria-hidden="true"
            >
              <SVGIcon
                aria-hidden="true"
                color="currentColor"
                config={
                  Object {
                    "height": 512,
                    "name": "TimesCircleIcon",
                    "svgPath": "M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z",
                    "transform": "",
                    "width": 512,
                    "xOffset": 0,
                    "yOffset": 0,
                  }
                }
                noVerticalAlign={false}
                size="sm"
              >
                <svg
                  aria-hidden="true"
                  aria-labelledby={null}
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style={
                    Object {
                      "verticalAlign": "-0.125em",
                    }
                  }
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
                    transform=""
                  />
                </svg>
              </SVGIcon>
            </TimesCircleIcon>
          </button>
        </Button>
      </ChipButton>
    </div>
  </GenerateId>
</Chip>
`;

exports[`Chip closable with tooltip 1`] = `
<Chip
  className="my-chp-cls"
  closeBtnAriaLabel="close"
  component="div"
  id="chip_one"
  isOverflowChip={false}
  isReadOnly={false}
  onClick={[Function]}
  tooltipPosition="top"
>
  <GenerateId
    prefix="pf-random-id-"
  >
    <div
      className="pf-c-chip my-chp-cls"
      data-ouia-component-id={5}
      data-ouia-component-type="PF4/Chip"
      data-ouia-safe={true}
    >
      <span
        className="pf-c-chip__text"
        id="pf-random-id-2"
      >
        1234567890123456789
      </span>
      <ChipButton
        aria-label="close"
        aria-labelledby="remove_pf-random-id-2 pf-random-id-2"
        id="remove_pf-random-id-2"
        onClick={[Function]}
      >
        <Button
          aria-label="close"
          aria-labelledby="remove_pf-random-id-2 pf-random-id-2"
          className=""
          id="remove_pf-random-id-2"
          onClick={[Function]}
          variant="plain"
        >
          <button
            aria-disabled={null}
            aria-label="close"
            aria-labelledby="remove_pf-random-id-2 pf-random-id-2"
            className="pf-c-button pf-m-plain"
            data-ouia-component-id={null}
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={false}
            id="remove_pf-random-id-2"
            onClick={[Function]}
            tabIndex={null}
            type="button"
          >
            <TimesCircleIcon
              aria-hidden="true"
            >
              <SVGIcon
                aria-hidden="true"
                color="currentColor"
                config={
                  Object {
                    "height": 512,
                    "name": "TimesCircleIcon",
                    "svgPath": "M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z",
                    "transform": "",
                    "width": 512,
                    "xOffset": 0,
                    "yOffset": 0,
                  }
                }
                noVerticalAlign={false}
                size="sm"
              >
                <svg
                  aria-hidden="true"
                  aria-labelledby={null}
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style={
                    Object {
                      "verticalAlign": "-0.125em",
                    }
                  }
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
                    transform=""
                  />
                </svg>
              </SVGIcon>
            </TimesCircleIcon>
          </button>
        </Button>
      </ChipButton>
    </div>
  </GenerateId>
</Chip>
`;

exports[`Chip overflow 1`] = `
<Chip
  className="my-chp-cls"
  closeBtnAriaLabel="close"
  component="div"
  isOverflowChip={true}
  isReadOnly={false}
  onClick={[Function]}
  tooltipPosition="top"
>
  <GenerateId
    prefix="pf-random-id-"
  >
    <div
      className="pf-c-chip pf-m-overflow my-chp-cls"
      data-ouia-component-id={1}
      data-ouia-component-type="PF4/OverflowChip"
      data-ouia-safe={true}
    >
      <ChipButton
        onClick={[Function]}
      >
        <Button
          aria-label="close"
          className=""
          onClick={[Function]}
          variant="plain"
        >
          <button
            aria-disabled={null}
            aria-label="close"
            className="pf-c-button pf-m-plain"
            data-ouia-component-id={null}
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={false}
            onClick={[Function]}
            tabIndex={null}
            type="button"
          >
            <span
              className="pf-c-chip__text"
            >
              4 more
            </span>
          </button>
        </Button>
      </ChipButton>
    </div>
  </GenerateId>
</Chip>
`;

exports[`Chip readonly 1`] = `
<Chip
  className="my-chp-cls"
  closeBtnAriaLabel="close"
  component="div"
  isOverflowChip={false}
  isReadOnly={true}
  onClick={[Function]}
  tooltipPosition="top"
>
  <GenerateId
    prefix="pf-random-id-"
  >
    <div
      className="pf-c-chip pf-m-read-only my-chp-cls"
      data-ouia-component-id={7}
      data-ouia-component-type="PF4/Chip"
      data-ouia-safe={true}
    >
      <span
        className="pf-c-chip__text"
        id="pf-random-id-3"
      >
        4 more
      </span>
    </div>
  </GenerateId>
</Chip>
`;

exports[`ChipButton 1`] = `
<ChipButton
  className="chip-bttn-cls"
  id="my-chip-button"
>
  <Button
    aria-label="close"
    className="chip-bttn-cls"
    id="my-chip-button"
    onClick={[Function]}
    variant="plain"
  >
    <button
      aria-disabled={null}
      aria-label="close"
      className="pf-c-button pf-m-plain chip-bttn-cls"
      data-ouia-component-id={null}
      data-ouia-component-type="PF4/Button"
      data-ouia-safe={true}
      disabled={false}
      id="my-chip-button"
      onClick={[Function]}
      tabIndex={null}
      type="button"
    >
      <b>
        Close
      </b>
    </button>
  </Button>
</ChipButton>
`;
